fix css spacing for new ui

--- a/modules/testing/src/views/full/style.scss
+++ b/modules/testing/src/views/full/style.scss
@@ -1,6 +1,6 @@
 .workspace {
   padding-top: 20px;
-  min-height: 100vh;
+  height: 100%;
   background: #fdfdfd;
   h2 {
     margin: 0;
